<?xml version="1.0" encoding="utf-8"?><!--
   Copyright 2018 Google LLC.

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<resources>
    <string name="app_name">Hello Sceneform</string>

    <string name="ItemNameString">Item Name </string>
    <string name="ItemLocationString">Item Location </string>
    <string name="ItemLabelString">Item Label </string>
    <string name="ItemSearch">Search...</string>

    <string name="showDetails">Show item details?</string>

    <string name="clearDatabase">Clear Database</string>
    <string name="databaseActivity">Database</string>
    <string name="restartActivity">Restart</string>
    <string name="returnToMain">Return</string>
    <string name="title_activity_db_info_viewer">dbInfoViewer</string>

    <string-array name="areaLocations">

        <item>Room1</item>
        <item>Room2</item>
        <item>Room3</item>

    </string-array>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>

</resources>
