<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dbInfo"
    android:layout_marginLeft="15sp"
    >

    <LinearLayout
        android:id="@+id/firstLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/displayDbInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/databaseActivity"
            android:textSize="20sp"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/firstLinearLayout"
        >

    <Button
        android:id="@+id/clearDatabaseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clearDatabase"
        android:onClick="clearOnClick"
        />

    <Button
        android:id="@+id/returnToMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/returnToMain"
        android:onClick="returnOnClick"
        />

    </LinearLayout>


</RelativeLayout>