<!--
   Copyright 2018 Google LLC.

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelloSceneformActivity"
    >

  <fragment android:name="com.google.ar.sceneform.ux.ArFragment"
      android:id="@+id/ux_fragment"
      android:layout_width="match_parent"
      android:layout_height="match_parent" />


  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:layout_gravity="top"
      android:layout_marginTop="32sp"
      android:layout_marginLeft="20sp"
      >

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    </Spinner>

    <EditText
        android:id="@+id/etName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:hint="@string/ItemNameString"
        />

    <EditText
        android:id="@+id/etLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:hint="@string/ItemLocationString"
        />

    <EditText
        android:id="@+id/etLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:hint="@string/ItemLabelString"
        />


  </LinearLayout>


<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="250dp"
    android:orientation="vertical"
    android:layout_marginTop="50dp"
    android:layout_marginRight="20sp"
    android:layout_gravity="end"
    >

    <Button
        android:id="@+id/dbButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/databaseActivity"
        android:onClick="viewDB"
        />

    <Button
        android:id="@+id/restartButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/restartActivity"
        android:onClick="restartActivity"
        />

    <Button
        android:id="@+id/loadNode"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:onClick="loadNode"
        android:text="Load Points"

        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:id="@+id/tryTV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightBlue"
        android:textColor="@color/black"
        android:textSize="20sp"
        />

    </LinearLayout>



</LinearLayout>

</FrameLayout>
